used fixed on desktop to avoid jagged profile and absolute on mobile to avoid parent scrolling and issue with input fields and fixed elements

--- a/app/views/shared/layout/main/main.styl
+++ b/app/views/shared/layout/main/main.styl
@@ -33,13 +33,19 @@
 
 
 
-
-
+$mobiledrawer-width = 300px
+moveX(x=0) {
+	transform: translateX(x);
+	transform: translate3d(x, 0, 0);
+}
 
 html, body, #page-wrapper {
-	/*height 100%*/
+	height 100%
 	width 100%
-	overflow hidden
+	overflow-x hidden
+}
+ul,ol {
+	margin 0
 }
 
 header {
@@ -59,14 +65,13 @@ nav {
 	overflow auto
 	-webkit-overflow-scrolling: touch;
 	height 100%
-	width 70%
+	width $mobiledrawer-width
 	background #333333
 	color white
 	a {
 		color white
 	}
 	position absolute
-	left -70%
 	top 0
 }
 
@@ -78,7 +83,7 @@ main {
 	padding-top 75px
 	width 100%
 	height 100%
-	overflow hidden
+	// overflow hidden
 }
 
 .contentArea {
@@ -88,6 +93,12 @@ main {
 	height: 100%;
 	-webkit-overflow-scrolling: touch;
 	overflow auto
+}
++isAbove(500px) {
+	.contentArea {
+		height: initial	
+	}
+	
 }
 
 .category-toggle, .category-hide, .hide {
@@ -117,16 +128,10 @@ label:focus {
 	color blue
 }
 
-// .kap1 {
-//      display none
-//      &:target {
-//              display block
-//      }
-// }
 
 +isBelow(500px) {
 	nav {
-		left -70%
+		left -($mobiledrawer-width)
 		label {
 			display block
 			margin 0
@@ -137,13 +142,21 @@ label:focus {
 	}
 
 	#menu {
-		transition: left 500ms ease;
+		moveX(0)
+		transition: 300ms ease all;
+		backface-visibility: hidden;
+		
+		// transition: left 500ms ease;
 		position relative
 		width 100%
-		left 0%
+		// left 0%
 		&:target {
 			background pink
-			left 70%
+			
+
+			// left 70%
+			moveX($mobiledrawer-width)
+
 			.menu-link {
 				display none
 			}
@@ -156,7 +169,6 @@ label:focus {
 
 +isAbove(500) {
 	nav {
-		transform: translate3d(0, 0, 0)
 		top 0
 		left 0
 		z-index 100
@@ -164,6 +176,7 @@ label:focus {
 		width 100%
 		overflow visible
 		padding-left 100px
+		position fixed
 		li {
 			min-height 30px
 			display inline-block
@@ -412,8 +425,8 @@ label:focus {
 	.contentArea__tabs {
 		z-index 1
 		background deepskyblue
-		position absolute
-		height 100%
+		position fixed
+		height calc(100% - 75px)
 		overflow auto
 		overflow-x hidden
 		width 85px
@@ -441,17 +454,27 @@ label:focus {
 .contentArea {
 	right 0%
 	transition: right 500ms ease;
+	// moveX(0)
+	// transition: 300ms ease all;
+	// backface-visibility: hidden;
 }
 
 main > aside {
+	right 0
 	box-sizing border-box
-	width 90%
+	width 90%//$mobiledrawer-width
 	position absolute
 	padding-top 75px
 	top 0
 	transition: right 500ms ease;
 	height 100%
 	right -20%
+	
+	// moveX( 50px)
+	// transition: 300ms ease all;
+	// backface-visibility: hidden;
+		
+	
 	background pink
 	overflow hidden
 	> div {
@@ -462,9 +485,12 @@ main > aside {
 		-webkit-overflow-scrolling touch
 	}
 	&:target {
-		right 0%
+		right 0
+		// moveX(0)
 		~ .contentArea {
 			right 90%
+			// moveX(-($mobiledrawer-width))
+			overflow hidden
 		}
 	}
 }
@@ -475,6 +501,7 @@ main > aside {
 		left -200px
 		width 200px
 		transition: left 500ms ease;
+		position fixed
 		~ .contentArea {
 			transition: left 500ms ease;
 			left 0
@@ -518,22 +545,53 @@ body {
 
 	/*-ms-overflow-style: -ms-autohiding-scrollbar;*/
 }
-::-webkit-scrollbar
-{
-	width: 8px;  /* for vertical scrollbars */
-	height: 8px; /* for horizontal scrollbars */
+
+// ::-webkit-scrollbar
+// {
+// 	width: 17px;  /* for vertical scrollbars */
+// 	height: 17px; /* for horizontal scrollbars */
+// }
+
+// ::-webkit-scrollbar-track
+// {
+// 	background: rgba(220, 220, 220, 1);
+// 	border-radius: 0px;
+// }
+
+// ::-webkit-scrollbar-thumb
+// {
+// 	border-radius: 0px;
+// 	background: rgba(150, 150, 150, 1);
+// }
+
+
+.page-wrapper * {
+	&::-webkit-scrollbar
+	{
+		width: 8px;  /* for vertical scrollbars */
+		height: 8px; /* for horizontal scrollbars */
+	}
+
+	&::-webkit-scrollbar-track {
+	    // -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	    // border-radius: 10px;
+	    background: rgba(0,0,0,0)
+	}
+
+	&::-webkit-scrollbar-thumb {
+	    // border-radius: 10px;
+	    background: rgba(0,0,0,0.3)
+	    // -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+	}
 }
 
-::-webkit-scrollbar-track
-{
-	background: rgba(0, 0, 0, 0.1);
-}
-
-::-webkit-scrollbar-thumb
-{
-	background: rgba(0, 0, 0, 0.5);
-}
-
+// .SiteNav, .SiteNav * {
+// 	&::-webkit-scrollbar-thumb {
+// 	    // border-radius: 10px;
+// 	    background: rgba(255,255,255, 0.3)
+// 	    // -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+// 	}
+// }
 
 
 
@@ -574,3 +632,14 @@ body {
 /*::-webkit-scrollbar-corner {*/
 	/*background: #000;*/
 /*}*/
+
+
++isAbove(500px) {
+	.anchor:before { //compensate for the fixed header on desktop
+		display: block;
+	    content: " ";
+	    height: 75px;
+	    margin-top: -75px;
+	    visibility: hidden;
+	}	
+}
